kubernetes/apps/home-automation/home-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
  labels:
    app: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
